--- a/frontend-website/package.json
+++ b/frontend-website/package.json
@@ -20,7 +20,7 @@
     "react-async": "^10.0.1",
     "react-dom": "^16.13.1",
     "react-icons": "^4.1.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.4",
     "urlsafe-base64": "^1.0.0",
     "yup": "^0.31.0"
   },
